--- a/index.html
+++ b/index.html
@@ -11,36 +11,39 @@
   <link rel="preload" href="styles.css" as="style">
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-  <title>Profile card component 👌👌</title>
+  <title>Profile card component 🦖🦕</title>
 
 </head>
 <body>
-  <main class="flex">
+  <main class="flex"> </main>
+  
+  <template id="template-card">
     <article class="card">
-      <img src="images/bg-pattern-card.svg" alt="" class="card-header" />
+      <img src="images/bg-pattern-card.svg" alt="imagen 1" class="card-header" />
       <div class="card-body">
-        <img src="images/image-victor.jpg" alt="" class="card-body-img" />
+        <img src="images/image-victor.jpg" alt="imagen body" class="card-body-img" />
         <h1 class="card-body-title">
-          Víctor charst
-          <span>26</span>
+         
         </h1>
-        <p class="card-body-text">London</p>
+        <p class="card-body-text"></p>
+        <p class="card-body-text_">Experiencia</p>
       </div>
       <div class="card-footer">
         <div class="card-footer-social">
           <h3>80K</h3>
-          <p>Followers</p>
+          <p>Ataque</p>
         </div>
         <div class="card-footer-social">
           <h3>803K</h3>
-          <p>Likes</p>
+          <p>Especial</p>
         </div>
         <div class="card-footer-social">
           <h3>1.4K</h3>
-          <p>Photos</p>
+          <p>Defensa</p>
         </div>
       </div>
     </article>
-  </main>
+  </template>
+  <script src="JS/script.js"> </script>
 </body>
 </html>
